--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-boundary-woffu",
-  "version": "1.1.2",
+  "name": "react-native-boundary",
+  "version": "2.0.1",
   "description": "native geofencing and region monitoring, works with React Native >= 0.60 and both iOS and Android including latest versions (8, 9, 10+).",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dotlabdev/react-native-boundary.git"
+    "url": "https://github.com/dotlabdev/react-native-boundary.git"
   },
   "typings": "typings/index.d.ts",
   "keywords": [
@@ -20,7 +20,7 @@
     "location",
     "region monitoring"
   ],
-  "author": "Woffu -> Forked from Edward Owens",
+  "author": "DotlabDev -> Woffu -> Forked from Edward Owens",
   "license": "Apache-2.0",
   "peerDependencies": {
     "react-native": ">0.49.0"
